[tool.poetry]
name = "playwright-htmlrender"
version = "0.0.1"
description = ""
authors = ["kexue <xana278@qq.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.75.2"
playwright = "^1.21.0"
loguru = "^0.6.0"
pydantic = "^1.9.0"
uvicorn = {extras = ["standard"], version = "^0.17.6"}

[tool.poetry.dev-dependencies]
black = "^22.3.0"
flake8 = "^4.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
