[tool.poetry]
name = "playwright-htmlrender"
version = "0.0.1"
description = ""
authors = ["kexue <xana278@qq.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.75.2"
playwright = "^1.21.0"
loguru = "^0.6.0"
pydantic = "^1.9.0"
uvicorn = {extras = ["standard"], version = "^0.17.6"}
Jinja2 = "^3.1.1"
python-markdown-math = "^0.8"
pymdown-extensions = "^9.4"
aiofiles = "^0.8.0"

[tool.poetry.dev-dependencies]
black = "^22.3.0"
flake8 = "^4.0.1"
httpx = "^0.22.0"
Pillow = "^9.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
